# tonic-dynamic-channel

./: Cargo.toml  build.rs
.github/: ci_tests.yml
.github/workflows/: ci_tests..yml  wip.yml
src/: dns.rs  dynamic_channel.rs  endpoint_builder.rs  endpoint_template.rs  lib.rs
tests/: foo.proto  mod.rs
