[package]
name = "tonic-dynamic-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
dns-lookup = "2.0"
tower = "0.4"
tokio = "1.36"
url = "2.5"
http = "0.2"

once_cell = "1.19"

[features]
default = ["tls"]
tls = ["tonic/tls"]
mock-dns = []

[dev-dependencies]
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sequential-test = "0.2"
rstest = "0.18"

[build-dependencies]
tonic-build = "0.11"
